# voiceshield_team

./: .gitignore  Dockerfile  README.md  SETUP_WHATSAPP.md  TECHNICAL_REPORT.md  plan.md
code/: README.md  paths.py  pyproject.toml
code/assets/scripts/: augment_audio.py  generate_synthetized_audio.py  mp3_to_wav_converter.py  rename_mp3_files.py  sum_audio_durations.py
code/models/step_2_augmented_features/: run.py
code/models/step_3_embeddings/: extract_openl3_embeddings.py  train_from_openl3.py
code/models/step_4_fine-tuning/: evaluate_finetuned_model.py  fine_tune_model.py
code/models/step_4_fine-tuning_balance_set/: evaluate_finetuned_model.py  fine_tune_model.py  fine_tune_setup.py
code/models/step_5_embeddings_balance_set/: check_embedding_split_leakage.py  check_embeddings.py  debug_train_embedding.py  extract_openl3_embeddings.py  train_from_openl3.py
code/models/step_6_fine-tuning_balance_set/: environment.yml  evaluate_finetuned_model_new.py  requirements.txt
code/models_testing/step_1_basic_exploration/: model.py  run.py
code/models_testing/step_2_augmented_mgcc/: experiment_2.py  testing_models_augmented.py
code/models_testing/step_3_embeddings/: embedding.py  extract_openl3_embeddings.py  test_models.py  train_from_openl3.py
code/models_testing/step_4_fine-tuning/: augment_audio.py  evaluate_finetuned_model.py  fine_tune_model.py  fine_tune_setup.py  requirements_finetune.txt
code/notebooks/: experiment_60_files_step.ipynb
voxceleb-aws-api/: .gitignore  README.md  app.py  pyproject.toml  upload.py
(+1408 files in other folders)
