[tool.poetry]
name = "deepfake-voice-detection"
version = "0.1.0"
description = "A system for detecting synthetic voices using MFCC features"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
librosa = "^0.10.0"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
gtts = "^2.3.0"
pydub = "^0.25.1"
TTS = "^0.13.0"
boto3 = "^1.26.0"
python-dotenv = "^1.0.0"
flask = "^2.3.0"
tqdm = "^4.65.0"
joblib = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 